assets/css/phoenix.css
/* ... */
*/
/* General style */
/*
h1{font-size: 3.6rem; line-height: 1.25}
h2{font-size: 2.8rem; line-height: 1.3}
h3{font-size: 2.2rem; letter-spacing: -.08rem; line-height: 1.35}
h4{font-size: 1.8rem; letter-spacing: -.05rem; line-height: 1.5}
h5{font-size: 1.6rem; letter-spacing: 0; line-height: 1.4}
h6{font-size: 1.4rem; letter-spacing: 0; line-height: 1.2}
*/

.container{
  margin: 0 auto;
  max-width: 80.0rem;
  padding: 0 2.0rem;
  position: relative;
  width: 100%
}
select {
  width: auto;
}



/* Alerts and form errors */
.alert {
  padding: 15px;
  margin-bottom: 20px;
  border: 1px solid transparent;
  border-radius: 4px;
}
.alert-info {
  color: #31708f;
  background-color: #d9edf7;
  border-color: #bce8f1;
}
.alert-warning {
  color: #8a6d3b;
  background-color: #fcf8e3;
  border-color: #faebcc;
}
.alert-danger {
  color: #a94442;
  background-color: #f2dede;
  border-color: #ebccd1;
}
.alert p {
  margin-bottom: 0;
}
.alert:empty {
  display: none;
}
.help-block {
  color: #a94442;
  display: block;
  margin: -1rem 0 2rem;
}


/* Phoenix promo and logo */
/*
.phx-hero {
  text-align: center;
  border-bottom: 1px solid #e3e3e3;
  background: #eee;
  border-radius: 6px;
  padding: 3em;
  margin-bottom: 3rem;
  font-weight: 200;
  font-size: 120%;
}
.phx-hero p {
  margin: 0;
}
.phx-logo {
  min-width: 300px;
  margin: 1rem;
}
*/
/*
.phx-logo img {
  width: auto;
  display: block;
}

*/
/* Headers */
header {
  width: 100%;
  background: #fdfdfd;
  border-bottom: 1px solid #eaeaea;
  margin-bottom: 2rem;
}
header section {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
header section :first-child {
  order: 2;
}
header section :last-child {
  order: 1;
}
/*
header nav ul,
header nav li {
  margin: 0;
  padding: 0;
  display: block;
  text-align: right;
  white-space: nowrap;
}
header nav ul {
  margin: 1rem;
  margin-top: 0;
}
header nav a {
  display: block;
}

*/


@media (min-width: 40.0rem) { /* Small devices (landscape phones, 576px and up) */
  header section {
    flex-direction: row;
  }
  header nav ul {
    margin: 1rem;
  }
  .phx-logo {
    flex-basis: 527px;
    margin: 2rem 1rem;
  }
}


 /* Add a black background color to the top navigation */
 .topnav {
  background-color: #f1f1f1;
  overflow: hidden;
}

/* Style the links inside the navigation bar */
.topnav a {
  float: left;
  display: block;
  color: #0069d9;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

/* Change the color of links on hover */
.topnav a:hover {
  background-color: #ddd;
  color: black;
}

/* Add an active class to highlight the current page */
.topnav a.active {
  background-color: #0069d9;
  color: white;
}

/* Hide the link that should open and close the topnav on small screens */
.topnav .icon {
  display: none;
} 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
  .topnav a:not(:first-child) {display: none;}
  .topnav a.icon {
    float: right;
    display: block;
  }
}

/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@media screen and (max-width: 600px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive a.icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}

#chat-box{
  text-align:left;
   margin:0 auto;
   margin-bottom:0px;
   padding:10px;
   background:#fff;
   height:400px;
   width:850px;
   border:1px solid #ACD8F0;
   overflow:auto;
   overflow-x: hidden; 
   display: inline-block;
   }

 #chat-interface {
   text-align: center;
   white-space: nowrap;
 
 }

#everything {
  text-align: center;
}

#user-list{
  height: 400px;
  width: 200px;
  display: inline-block;
  overflow-y: auto;
  margin-bottom: 25px;
}


#user-list a {
  background-color: #eee;
  color: black;
  display: block;
  padding: 12px;
  text-decoration: none;
 }
 
 #user-list a:hover {
  background-color: #ccc; /* Dark grey background on mouse-over */
 }
 
 #user-list a.active {
  background-color: #4CAF50; /* Add a green color to the "active/current" link */
  color: white;
 }

.vertical-menu {
 width: 200px;
 height: 400px;
 overflow-y: auto;
 display: inline-block;
 margin-bottom:25px;
 overflow-x: hidden;
}

.vertical-menu a {
 background-color: #eee;
 color: black;
 display: block;
 padding: 12px;
 text-decoration: none;
}

.vertical-menu a:hover {
 background-color: #ccc; /* Dark grey background on mouse-over */
}

.vertical-menu a.active {
 background-color: #4CAF50; /* Add a green color to the "active/current" link */
 color: white;
}

